# Kryptonite-Hackathon-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  fire_tools.py  firms_map.html  firms_temp.csv  firms_temp.txt  index.py  pyproject.toml  requirements.txt  settlelite_image_fire_coordinate.py  temp.ipynb  test.html
