[project]
name = "settlitefiredetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.128.0",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.7",
    "langsmith>=0.6.4",
    "pandas>=2.3.3",
    "python-multipart>=0.0.21",
    "ultralytics>=8.4.2",
    "uvicorn>=0.40.0",
    "vconsoleprint>=1.0.2",
]
